--- a/master.lyx
+++ b/master.lyx
@@ -4,8 +4,26 @@
 \begin_header
 \textclass scrbook
 \begin_preamble
-\usepackage{tikz}
+\usepackage[nottoc]{tocbibind} 
 \usepackage{hyperref}
+\usepackage{tikz}
+%\tikzstyle{every node}=[circle, draw=black,inner sep=0.2em]
+%\usetikzlibrary{fixedpointarithmetic}
+%\usetikzlibrary{positioning}
+%\let\nchapter\chapter
+%\renewcommand*\chapter[1]{\nchapter*{#1}\addcontentsline{toc}{chapter}{#1}}
+%\theoremstyle{definition}
+%\newtheorem{notation}[thm]{Notation}
+%\newtheorem*{notation*}{Notation}
+%\numberwithin{thm}{chapter}
+
+\usepackage{prettyref}
+\newrefformat{chap}{\textbf{Kapitel~\ref{#1}}}
+\newrefformat{sec}{\textbf{Abschnitt~\ref{#1}}}
+\newrefformat{sub}{\textbf{Abschnitt~\ref{#1}}}
+\newrefformat{thm}{\textbf{Theorem~\ref{#1}}}
+\newrefformat{lem}{\textbf{Lemma~\ref{#1}}}
+\newrefformat{prop}{\textbf{Satz~\ref{#1}}}
 \end_preamble
 \use_default_options true
 \begin_modules
@@ -78,6 +96,27 @@ theorems-chap
 \end_header
 
 \begin_body
+
+\begin_layout Title
+Logische Charakterisierungen von Symmetrischen Schaltkreisfamilien
+\end_layout
+
+\begin_layout Subtitle
+Master-Arbeit
+\end_layout
+
+\begin_layout Author
+Christoph Burschka
+\end_layout
+
+\begin_layout Standard
+\begin_inset CommandInset toc
+LatexCommand tableofcontents
+
+\end_inset
+
+
+\end_layout
 
 \begin_layout Chapter
 Einleitung
@@ -536,13 +575,6 @@ Logik erster Stufe und Schaltkreise konstanter Tiefe
 \end_layout
 
 \begin_layout Theorem
-\begin_inset CommandInset citation
-LatexCommand cite
-key "IMMERMAN198686"
-
-\end_inset
-
-
 \begin_inset CommandInset label
 LatexCommand label
 name "thm:5.5:fo-ord"
@@ -562,6 +594,13 @@ name "thm:5.5:fo-ord"
 \end_inset
 
 .
+\begin_inset CommandInset citation
+LatexCommand cite
+key "IMMERMAN198686"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Theorem
@@ -1987,6 +2026,10 @@ Per Definition sind alle
 
 \begin_layout Chapter
 Logik
+\end_layout
+
+\begin_layout Section
+Logische Grundlagen
 \end_layout
 
 \begin_layout Standard
